feat: docker-compose geral